atualização - lavis (adm- vistoria de produtos e homeadm)

--- a/app/views/pages/homeadm.ejs
+++ b/app/views/pages/homeadm.ejs
@@ -26,7 +26,7 @@
         <a href="/denuncias">Denúncias</a>
         <a href="/avaliacaoadm">Avaliações</a>
         <a href="/estatisticaadm">Estatísticas</a>
-        <a href="/vistoriaprodutos">Produtos</a>
+        <a href="/produtosadm">Produtos</a>
     </nav>
       <section class="search-profile">
         <form>
@@ -77,7 +77,7 @@
                   Pedidos
                 </li>
                 <li>
-                  <a href="/vistoriaprodutos"><img src="imagens/add produto.svg" class="icones" alt="Produtos"></a>
+                  <a href="/produtosadm"><img src="imagens/add produto.svg" class="icones" alt="Produtos"></a>
                   Produtos
                 </li>
                 <li>
